# theaiconclave

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  README.md  ai-switchboard.icns  config.example.yaml  launch.pyw  pyproject.toml  requirements.txt  task.json  task2.json  task3.json
app/: __init__.py  config.py  database.py  main.py
clients/: README.md  install.py
data/: switchboard.pid
docs/: AGENT_ADAPTERS.md  CODING_WORKFLOW.md  CONCLAVE_CHARTER.md  DATABASE_SCHEMA.md  MVP_PLAN.md  ROADMAP.md  SAFETY_MODEL.md  SKILLS_SYSTEM.md  SWITCHBOARD_PROTOCOL.md  TASK_LIFECYCLE.md
examples/: agent_response_consultant.json  agent_response_primary.json  approval_required.json  final_result.json  peer_answer_poll.json  task_request_code_review.json  task_request_conclave.json  task_request_debug.json  task_request_fake.json  task_request_resolve.json
landing/: how-it-works.html  index.html  manifesto.html  pricing.html  styles.css  use-cases.html
tests/: conftest.py  test_action_plan.py  test_action_plan_orchestrator.py  test_adapter_readiness.py  test_clarification_artifacts.py  test_claude_subscription_cost.py  test_conclave_flow.py  test_confidence_aggregate.py  test_config_resolution.py  test_db_concurrency.py  test_decision_memory.py  test_delete_task.py  test_doc_export.py  test_export_tracking.py  test_exporter.py  test_failure_cause_tags_end_to_end.py  test_fake_adapter.py  test_health_endpoint.py  test_json_tools.py  test_judge.py  test_legacy_dir_migration.py  test_migration.py  test_ollama_adapter.py  test_openrouter_adapter.py  test_openrouter_tool_loop.py  (+19 more)
(+120 files in other folders)
